--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,10 @@ description = ""
 authors = ["Artem Legotin <arlegotin@gmail.com>"]
 
 [project]
-requires-python = ">=3.8"
+requires-python = "^3.11"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.11"
 chess = "^1.9.4"
 notebook = "^6.5.3"
 ipywidgets = "^8.0.4"
@@ -20,11 +20,16 @@ pandas = "^1.5.3"
 plotly-express = "^0.4.1"
 matplotlib = "^3.7.1"
 PyYAML = "^6.0"
-lightning = "^2022.10.25"
+lightning = "^2.2.4"
 websockets = "^11.0.3"
 torch = "^2.0.1"
 torch-exid = "^0.1.5"
 stockfish = {git = "https://github.com/py-stockfish/stockfish.git"}
+fenToBoardImage = "^1.3.0"
+opencv-python = "^4.9.0"
+torchvision = "^0.18.0"
+timm = "^0.9.16"
+omegaconf = "^2.3.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
