--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ opencv-python = "^4.9.0"
 torchvision = "^0.18.0"
 timm = "^0.9.16"
 omegaconf = "^2.3.0"
+torchmetrics = "^1.4.0.post0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
